--- a/gestion-projet/compte-rendu/compte-rendu-reunion-1.tex
+++ b/gestion-projet/compte-rendu/compte-rendu-reunion-1.tex
@@ -14,7 +14,7 @@
     \\ 
     Découverte des consignes &
     \\\hline
-    \textbf{Présent(s)(retard/excusés :}
+    \textbf{Présent(s)retard/excusés :}
     &
     \textbf{Date / Heure de début / Durée :}
     \\ 
