--- a/gestion-projet/compte-rendu/compte-rendu-reunion-3.tex
+++ b/gestion-projet/compte-rendu/compte-rendu-reunion-3.tex
@@ -2,13 +2,13 @@
 \usepackage[utf8]{inputenc}
 
 \begin{document}
-\section*{Projet PPII - Compte rendu réunion N°2}
+\section*{Projet PPII - Compte rendu réunion N°3}
 \begin{tabular}{|p{7cm}|p{6cm}|}
     \hline
     \textbf{Motif / Type de réunion :}
     & \textbf{Lieu :}
     \\
-    Finaliser l’idée, répartir tâches gestion de projet 
+    Visualiser l'avancement du projet et redirigez le travail si nécessaire.
     & 
     Telecom Nancy
     \\ \hline
@@ -16,17 +16,17 @@
     &
     \textbf{Date / Heure de début / Durée :}
     \\ 
-    TEMPESTINI Terry &  14/10/22\\  
-    DEVEAUX Paul & début 13h\\
-    HORNBERGER Théo & fin 14h\\
+    TEMPESTINI Terry &  17/10/22\\  
+    DEVEAUX Paul & début 18h\\
+    HORNBERGER Théo & fin 18h25\\
     ARIES Lucas & 
     \\ \hline
 \end{tabular}
 
 \subsection*{Ordre du jour :}
 \begin{itemize}
-    \item{Définir clairement l’idée d’application}
-    \item{Répartir les différentes tâches}
+    \item{Notifier l'avancement des tâches}
+    \item{Organiser la prochaine réunion}
 \end{itemize}
 
 \subsection*{Todo List :}
@@ -34,9 +34,9 @@
     \hline 
     Description & Responsable & Délai & Livrable & Validé par 
     \\ \hline
-    État de l’art & Terry, Théo & 3 jours &Document (Analyse de l’existant) & x
+    Terminer les différents documents & Équipe projet & 2 jours & Charte projet et état de l'art & Équipe projet
     \\ \hline
-    Gestion de projet & Paul, Lucas & 3 jours & SWOT, charte de projet, todo-list & x
+    Mettre en forme le rapport final & Équipe projet & 1 jours & Rapport final dû au jeudi & Équipe projet
     \\ \hline
 \end{tabular}
 
