fix: reunion template

--- a/gestion-projet/compte-rendu/compte-rendu-reunion-template.tex
+++ b/gestion-projet/compte-rendu/compte-rendu-reunion-template.tex
@@ -12,7 +12,7 @@
     & 
     lieu
     \\ \hline
-    \textbf{Présent(s)(retard/excusés :}
+    \textbf{Présent(s)retard/excusés :}
     &
     \textbf{Date / Heure de début / Durée :}
     \\ 
