--- a/gestion-projet/documents-annexes/charte-projet.tex
+++ b/gestion-projet/documents-annexes/charte-projet.tex
@@ -84,7 +84,7 @@
 \end{center}
 \section*{\color{orange}{\Large Organisation / ressources, budget}}
 \begin{itemize}
-    \item Le livre de mission du projet est le suivant : \\ 
+    \item Le livret de mission du projet est le suivant : \\ 
     \textit{"Votre objectif est, en mettant en œuvre les principes de Gestion de Projet appris et
     ceux en cours d’acquisition dans le cours de gestion de projet et en mobilisant les acquis
     scientifiques et techniques du module CS54, de concevoir et d’implémenter une application
