--- a/gestion-projet/documents-annexes/charte-projet.tex
+++ b/gestion-projet/documents-annexes/charte-projet.tex
@@ -1,6 +1,6 @@
 \documentclass{report}
 \usepackage[utf8]{inputenc}
-\usepackage {xcolor}
+\usepackage{xcolor}
 
 \begin{document}
 \begin{center}
@@ -41,6 +41,9 @@
 
 \newpage
 
+
+% ------------------------- Table des matières --------------------------------------------
+
 \begin{center}
     \textbf{\color{orange}{\Huge Charte-projet}} \\
     \textbf{\color{blue}{\Large Table des matières}}
@@ -49,15 +52,14 @@
 \section*{Résumé}
 \section*{1/ Cadrage}
 \begin{itemize}
-    \item La finalité du projet est la réalisation d'une application web original qui va offrir un service en lien avec l’exploitation de jardins partagés ou privés.
-    \item Projet a réaliser en première année à Telecom Nancy pour le module PPII (Projet Pluridisciplinaire d'Informatique Intégrative) en groupe de 4 étudiants.
+    \item La finalité du projet est la réalisation d'une application web qui a pour but de coordonner les différents participants d'un jardin partagé, et attirer un nouveau public à y participer.
+    \item Le projet est réalisé en première année à Telecom Nancy dans le cadre du module PPII (Projet Pluridisciplinaire d'Informatique Intégrative) en groupe de 4 étudiants.
     \item Les objectifs de ce projet, sont de :  
     \begin{itemize}
         \item Mettre en oeuvre la gestion de projet apprise pendant les cours
         \item Apprendre a travailler à plusieurs sur un même projet.
         \item De concevoir une application web possédant une partie base de données, web et algorithmique.
     \end{itemize}
-
 \end{itemize}
 
 \section*{2/ Déroulement du projet}
@@ -73,11 +75,65 @@
 \end{itemize}
 
 \newpage
+
+
+
+
+
+
+% ----------------------------------- Cadrage ----------------------------------
+
+
 \begin{center}
     \textbf{\color{orange}{\Huge Cadrage}} \\
-\end{center}
+\end{center}   
+    \section*{\color{orange}{\Large Contexte}} 
+    Les ressources naturelles deviennent de plus en plus rares et de plus en plus chères. La France, à l’instar de nombreux pays, est entrée dans un plan de sobriété économique. Cela se traduit par des mesures mises en place pour réduire notre consommation de ressources naturelles mais aussi notre consommation énergétique. 
+    L’une des nombreuses idées pour contribuer à ce projet est d’inciter les consommateurs à se fournir leur alimentation via des circuits courts, c'est-à-dire des circuits impliquant le moins d’intermédiaires possibles, généralement aucun voir un seul. Cela permet alors de réduire la consommation énergétique liée au transport de marchandises, et donc leur coût. \\
+    En parallèle, de nombreuses collectivités territoriales ont mis en place des jardins partagés, ce sont des jardins gérés et animés par des habitants d’un même quartier. En plus d’être une bonne alternative aux circuits courts d’un point de vue écologique et économique, cela permet de recréer un lien social, ce qui est le bienvenu après la crise de la Covid. \\
+    
+    L'objectif du projet est donc de créer un site web divertissant, ludique et simple d’utilisation qui améliorera la communication et la coordination des différents participants d’un jardin partagé. Il permettra aussi de répartir les récoltes de façon équitable. Voici les fonctions principales que l'application doit prendre en compte :
+    \begin{itemize}
+        \item Permettre aux utilisateurs de créer un jardin en renseignant les récoltes qui y sont effectuées, le nombre de places disponibles pour y participer, le lieu, ...
+        \item Permettre aux utilisateurs de rejoindre un jardin existant.
+        \item Créer une économie liée à un jardin en particulier. Chaque jardin possèdera sa propre monnaie, elle ne pourra pas être utilisée dans d’autres jardins.
+        \item Permettre la création de missions appelées quêtes, qui auront comme objectif les besoins nécessaires à l’entretien des jardins. Les personnes les effectuant seront récompensées d’une certaine quantité de monnaie. Ces quêtes pourront être ponctuelles ou cycliques. Si elles sont cycliques, le délai avant qu'elles ne se répétent pourra être paramétré.
+        \item Permettre la gestion d'un marché lié à un jardin. Les gérants du jardin pourront y proposer les récoltes du jardin contre de la monnaie. \item Permettre la communication entre différants participants du jardin.
+        \item Permettre aux utilisateurs de déposer des avis sur d'autres utilisateurs 
+        \item Intégrer un système de niveau qui récompense les utilisateurs actifs, via des quêtes qu'ils effectuent ou des avis qu'ils reçoivent.
+    \end{itemize}
+
+    De plus, l'application doit être réalisé en python,doit s'appuyer sur une base de données et doit être accesible via le web.\\
+    
+    La clientèle cible est donc tout d'abord les participants et gérants des jardins partagés, pour lesquels la communication dout être simplifiée. Cela se traduit par la liste des tâches restantes à accomplir dans le jardin et par le marché qui doit rendre le partage des récoltes plus équitables, mais également par un outil de discussion en ligne.
+    Une autre clientèle, qui est novice des jardins, est visé. La ludification de l'application doit leurs permettre d'appréhender le jardinage de manière plus amusante.
+    
+    
+    \section*{\color{orange}{\Large Finalités}}
+    Ce projet a pour but de coordonner les différents participants d'un jardin partagé en aidant les gérants à mieux répartir les tâches nécessaires à l'entretien du jardin, ainsi qu'à mieux partager les récoltes. Il a également pour but d'inciter un nouveau public à s'intéresser aux jardins partagés, notamment les plus jeunes, grâce à de la ludification.\\
+    
+    La force du projet est qu'il est constitué d'une équipe qui a déjà acquis de l'expérience dans le développement d'application et qui a déjà vécu des conditions de travail en équipe similaires. Les tâches seront donc en théorie plus vite réalisées et mieux coordonnées qu'avec une équipe n'ayant jamais travaillé dans ces conditions. De plus, le projet ne comprend pas de budget, ce qui facilite la gestion de projet.\\
+    Concernant les faiblesses, aucun des membres de l'équipe projet est spécialisé dans le front-end (mise en page de l'application). Les tâches relatives au front-end seront donc plus laborieuses. Les délais pour le projet sont également assez courts et l'équipe ne peut pas consacrer l'entièreté de son temps de travail sur le projet. Une très bonne organisation et répartition des tâches sera de mise. Pour finir, le marché est méconnu pour l'équipe. Les membres possèdent peu de connaissance dans le domaine du jardinage.\\
+    
+    
+    
+    \section*{\color{orange}{\Large Livrables}}
+    Tout au long du projet, l'équipe projet devra rendre plusieurs livrables :
+    \begin{itemize}
+        \item Ensemble des fichiers sources des implémentations sur le dépot gitlab.
+        \item Documentation sur le dépot gitlab.
+        \item Ensemble des documents produits relatifs à la gestion de projet.
+        \item Rapport synthétique rédigé en LaTeX du travail sur l'état de l'art, décrivant l'application proposé et présentant en détails la gestion du projet. \textit{(20/10/2022)}
+        \item Présentation en beamer ou Powerpoint de l'état de l'art réalisé, du concept de l'application visée et de son innovation. \textit{(22/10/2022)}
+        \item Rapport rédigé en LaTeX synthétisant le travail et qui explique la conception et l'implémentation de l'application, une démonstration des tests et des performances, et l'explication de la gestion de projet. \textit{(06/01/2023)}
+        \item Soutenance en beamer ou Powerpoint comportant des explications sur la conception et l'implémentation des différentes parties de l'application, une démonstration des fonctions, et des réponses aux questions. \textit{(14/01/2023)}
+        
+    \end{itemize}
 
 
+
+
+% ------------------------------ Déroulement du projet ------------------------------
 \newpage
 \begin{center}
     \textbf{\color{orange}{\Huge Déroulement du projet}} \\
