--- a/gestion-projet/documents-annexes/charte-projet.tex
+++ b/gestion-projet/documents-annexes/charte-projet.tex
@@ -17,7 +17,7 @@
     theo.hornberger@telecomnancy.eu & \\ \hline
     TEMPESTINI Terry & Membre du projet \\
     terry.tempestini@telecomnancy.eu & \\ \hline
-    ARIES Lucas & Membre du projet \\
+    ARIES Lucas & Chef du projet \\
     lucas.aries@telecomnancy.eu & \\ \hline
 \end{tabular}
 
@@ -97,15 +97,15 @@
         \item Permettre aux utilisateurs de créer un jardin en renseignant les récoltes qui y sont effectuées, le nombre de places disponibles pour y participer, le lieu, ...
         \item Permettre aux utilisateurs de rejoindre un jardin existant.
         \item Créer une économie liée à un jardin en particulier. Chaque jardin possèdera sa propre monnaie, elle ne pourra pas être utilisée dans d’autres jardins.
-        \item Permettre la création de missions appelées quêtes, qui auront comme objectif les besoins nécessaires à l’entretien des jardins. Les personnes les effectuant seront récompensées d’une certaine quantité de monnaie. Ces quêtes pourront être ponctuelles ou cycliques. Si elles sont cycliques, le délai avant qu'elles ne se répétent pourra être paramétré.
-        \item Permettre la gestion d'un marché lié à un jardin. Les gérants du jardin pourront y proposer les récoltes du jardin contre de la monnaie. \item Permettre la communication entre différants participants du jardin.
+        \item Permettre la création de missions appelées quêtes, qui auront comme objectif les besoins nécessaires à l’entretien des jardins. Les personnes les effectuant seront récompensées d’une certaine quantité de monnaie. Ces quêtes pourront être ponctuelles ou cycliques. Si elles sont cycliques, le délai avant qu'elles ne se répètent pourra être paramétré.
+        \item Permettre la gestion d'un marché lié à un jardin. Les gérants du jardin pourront y proposer les récoltes du jardin contre de la monnaie. \item Permettre la communication entre différents participants du jardin.
         \item Permettre aux utilisateurs de déposer des avis sur d'autres utilisateurs 
         \item Intégrer un système de niveau qui récompense les utilisateurs actifs, via des quêtes qu'ils effectuent ou des avis qu'ils reçoivent.
     \end{itemize}
 
-    De plus, l'application doit être réalisé en python,doit s'appuyer sur une base de données et doit être accesible via le web.\\
+    De plus, l'application doit être réalisé en python,doit s'appuyer sur une base de données et doit être accessible via le web.\\
     
-    La clientèle cible est donc tout d'abord les participants et gérants des jardins partagés, pour lesquels la communication dout être simplifiée. Cela se traduit par la liste des tâches restantes à accomplir dans le jardin et par le marché qui doit rendre le partage des récoltes plus équitables, mais également par un outil de discussion en ligne.
+    La clientèle cible est donc tout d'abord les participants et gérants des jardins partagés, pour lesquels la communication doit être simplifiée. Cela se traduit par la liste des tâches restantes à accomplir dans le jardin et par le marché qui doit rendre le partage des récoltes plus équitables, mais également par un outil de discussion en ligne.
     Une autre clientèle, qui est novice des jardins, est visé. La ludification de l'application doit leurs permettre d'appréhender le jardinage de manière plus amusante.
     
     
@@ -161,7 +161,7 @@
 \section*{\color{orange}{\Large Jalons : échéancier / évènements importants }}
 Les différents évènements importants sont les réunions qui sont très régulières dues à la réalisation du projet avec les méthodes AGILES, mais aussi les différents livrables exigés qui rythme la vitesse de réalisation du projet
 \vspace{0.5cm} \\
-La plupart des jalons importants sont répertoriés à l'aide de la todo-list suivante, Il faut noté que les éléments de la partie informatique ne sont pas encore très détaillé.
+La plupart des jalons importants sont répertoriés à l'aide de la todo-list suivante, Il faut noté que les éléments de la partie informatique ne sont pas encore très détaillés.
 
 \begin{tabular}{|p{4cm}|c|c|c|p{3cm}|}
     \hline
@@ -194,7 +194,7 @@ La plupart des jalons importants sont répertoriés à l'aide de la todo-list su
 
 \section*{\color{orange}{\Large Risques et opportunités}}
 Il y a différents risques et opportunités liées au déroulement du projet. \\ 
-La principale opportunité pour le déroulement du projet est liée au corps enseignant et à leurs disponibilités pour répondre aux éventuelles questions, ou résoudre d'éventuels problèmes. \\ \\ 
+La principale opportunité pour le déroulement du projet est liée au corps enseignant qui représente un groupe d'expert qui est a disponibilités pour répondre aux éventuelles questions, ou résoudre d'éventuels problèmes. \\ \\ 
 De plus les jardins partagés deviennent de plus en plus courants notamment à cause de l'inflation des prix de l’alimentation qui incite à produire et manger local mais aussi le plan de relance (France Relance) pour les jardins partagés mais aussi l'absence de concurrent national sur le marché. \\  \\ 
 Quant au risques possibles au projet ceux-si sont multiples  \\ 
 Que ce soit organisationnel avec notamment des dates imposées pour les livrables et donc la possibilité de ne pas réussir à être dans les délais mais aussi le fait qu'un nombre conséquent de concurrent risque de voir le jour. \\ 
