--- a/gestion-projet/documents-annexes/charte-projet.tex
+++ b/gestion-projet/documents-annexes/charte-projet.tex
@@ -29,6 +29,7 @@
    \hline 
     V.0.1 & Brouillon: préparation du documents
     \\ \hline
+    V.0.2 & Relecture, reformulation des phrases et correction
 \end{tabular}
 
 \vspace{0.5cm}
@@ -54,7 +55,7 @@
 \begin{itemize}
     \item La finalité du projet est la réalisation d'une application web qui a pour but de coordonner les différents participants d'un jardin partagé, et attirer un nouveau public à y participer.
     \item Le projet est réalisé en première année à Telecom Nancy dans le cadre du module PPII (Projet Pluridisciplinaire d'Informatique Intégrative) en groupe de 4 étudiants.
-    \item Les objectifs de ce projet, sont de :  
+    \item Les objectifs de ce projet sont de :  
     \begin{itemize}
         \item Mettre en oeuvre la gestion de projet apprise pendant les cours
         \item Apprendre a travailler à plusieurs sur un même projet.
@@ -64,14 +65,14 @@
 
 \section*{2/ Déroulement du projet}
 \begin{itemize}
-    \item L'organisation du projet est jalonnée par les différents rendus attendus par l'école, en terme de ressources et de budget, il n'y a aucun temps sur l'emploi du temps consacré à celui-ci ni de budget, il est réalisé sur le temps libre des différents acteurs du projet.
-    \item Les principaux évènements importants sont les réunions et les livrables imposés par le sujet tels que 
+    \item L'organisation du projet est jalonnée par les différents rendus attendus par l'école. Il n'y a aucun temps sur l'emploi du temps consacré à celui-ci ni de budget, il est réalisé sur le temps libre des différents acteurs du projet.
+    \item Les principaux évènements importants sont les réunions et les livrables imposés par le sujet tels que :
         \begin{itemize}
         \item Soutenance Gestion-Projet/État de l'art le 22/10/22.
         \item Rendu de projet le 06/01/23.
         \item Soutenance du projet le 14/01/23.
     \end{itemize}
-    \item Les principaux risques sont de sous-estimer le temps nécessaire à la réalisation des différentes tâches et par conséquent de ne pas rendre les livrables dans les délais et les utilisateurs malveillants, quant aux opportunités celles-ci sont plutôt nombreuses notamment grâce à la situation économique actuelle.
+    \item Les principaux risques sont les utilisateurs malveillants, et de sous-estimer le temps nécessaire à la réalisation des différentes tâches, et par conséquent de ne pas rendre les livrables dans les délais. Quant aux opportunités, celles-ci sont plutôt nombreuses notamment grâce à la situation économique actuelle.
 \end{itemize}
 
 \newpage
@@ -97,23 +98,23 @@
         \item Permettre aux utilisateurs de créer un jardin en renseignant les récoltes qui y sont effectuées, le nombre de places disponibles pour y participer, le lieu, ...
         \item Permettre aux utilisateurs de rejoindre un jardin existant.
         \item Créer une économie liée à un jardin en particulier. Chaque jardin possèdera sa propre monnaie, elle ne pourra pas être utilisée dans d’autres jardins.
-        \item Permettre la création de missions appelées quêtes, qui auront comme objectif les besoins nécessaires à l’entretien des jardins. Les personnes les effectuant seront récompensées d’une certaine quantité de monnaie. Ces quêtes pourront être ponctuelles ou cycliques. Si elles sont cycliques, le délai avant qu'elles ne se répètent pourra être paramétré.
+        \item Permettre la création de quêtes. Leur objectif les besoins nécessaires à l’entretien des jardins. Les personnes les effectuant seront récompensées d’une certaine quantité de monnaie. Ces quêtes pourront être ponctuelles ou cycliques. Si elles sont cycliques, le délai avant qu'elles ne se répètent pourra être paramétré.
         \item Permettre la gestion d'un marché lié à un jardin. Les gérants du jardin pourront y proposer les récoltes du jardin contre de la monnaie. \item Permettre la communication entre différents participants du jardin.
         \item Permettre aux utilisateurs de déposer des avis sur d'autres utilisateurs 
         \item Intégrer un système de niveau qui récompense les utilisateurs actifs, via des quêtes qu'ils effectuent ou des avis qu'ils reçoivent.
     \end{itemize}
 
-    De plus, l'application doit être réalisé en python,doit s'appuyer sur une base de données et doit être accessible via le web.\\
+    De plus, l'application doit être réalisé en python, doit s'appuyer sur une base de données et doit être accessible via le web.\\
     
     La clientèle cible est donc tout d'abord les participants et gérants des jardins partagés, pour lesquels la communication doit être simplifiée. Cela se traduit par la liste des tâches restantes à accomplir dans le jardin et par le marché qui doit rendre le partage des récoltes plus équitables, mais également par un outil de discussion en ligne.
-    Une autre clientèle, qui est novice des jardins, est visé. La ludification de l'application doit leurs permettre d'appréhender le jardinage de manière plus amusante.
+    Une autre clientèle, qui est novice des jardins, est visé. La ludification de l'application doit leur permettre d'appréhender le jardinage de manière plus amusante.
     
     
     \section*{\color{orange}{\Large Finalités}}
     Ce projet a pour but de coordonner les différents participants d'un jardin partagé en aidant les gérants à mieux répartir les tâches nécessaires à l'entretien du jardin, ainsi qu'à mieux partager les récoltes. Il a également pour but d'inciter un nouveau public à s'intéresser aux jardins partagés, notamment les plus jeunes, grâce à de la ludification.\\
     
     La force du projet est qu'il est constitué d'une équipe qui a déjà acquis de l'expérience dans le développement d'application et qui a déjà vécu des conditions de travail en équipe similaires. Les tâches seront donc en théorie plus vite réalisées et mieux coordonnées qu'avec une équipe n'ayant jamais travaillé dans ces conditions. De plus, le projet ne comprend pas de budget, ce qui facilite la gestion de projet.\\
-    Concernant les faiblesses, aucun des membres de l'équipe projet est spécialisé dans le front-end (mise en page de l'application). Les tâches relatives au front-end seront donc plus laborieuses. Les délais pour le projet sont également assez courts et l'équipe ne peut pas consacrer l'entièreté de son temps de travail sur le projet. Une très bonne organisation et répartition des tâches sera de mise. Pour finir, le marché est méconnu pour l'équipe. Les membres possèdent peu de connaissance dans le domaine du jardinage.\\
+    Concernant les faiblesses, aucun des membres de l'équipe projet est spécialisé dans le front-end (mise en page de l'application). Les tâches relatives au front-end seront donc plus laborieuses. Les délais pour le projet sont également assez courts et l'équipe ne peut pas consacrer l'entièreté de son temps de travail sur le projet. Une très bonne organisation et répartition des tâches sera de mise. Pour finir, le marché est relativement méconnu de l'équipe. Les membres possèdent peu de connaissance dans le domaine du jardinage.\\
     
     
     
@@ -144,7 +145,7 @@
     \textit{"Votre objectif est, en mettant en œuvre les principes de Gestion de Projet appris et
     ceux en cours d’acquisition dans le cours de gestion de projet et en mobilisant les acquis
     scientifiques et techniques du module CS54, de concevoir et d’implémenter une application
-    innovante dédiées à l’optimisation des ressources dans les vergers et potagers du territoire}
+    innovante dédiée à l’optimisation des ressources dans les vergers et potagers du territoire}
     \item Rôles et responsabilités
     \begin{itemize}
         \item Équipe projet - Réalisation des différents livrables exigés.
@@ -159,9 +160,9 @@
     
 \end{itemize}
 \section*{\color{orange}{\Large Jalons : échéancier / évènements importants }}
-Les différents évènements importants sont les réunions qui sont très régulières dues à la réalisation du projet avec les méthodes AGILES, mais aussi les différents livrables exigés qui rythme la vitesse de réalisation du projet
+Les différents évènements importants sont les réunions qui sont très régulières dues à la réalisation du projet avec les méthodes AGILES, mais aussi les différents livrables exigés qui rythme la vitesse de réalisation du projet.
 \vspace{0.5cm} \\
-La plupart des jalons importants sont répertoriés à l'aide de la todo-list suivante, Il faut noté que les éléments de la partie informatique ne sont pas encore très détaillés.
+La plupart des jalons importants sont répertoriés à l'aide de la todo-list suivante :
 
 \begin{tabular}{|p{4cm}|c|c|c|p{3cm}|}
     \hline
@@ -193,10 +194,10 @@ La plupart des jalons importants sont répertoriés à l'aide de la todo-list su
 \end{tabular}
 
 \section*{\color{orange}{\Large Risques et opportunités}}
-Il y a différents risques et opportunités liées au déroulement du projet. \\ 
-La principale opportunité pour le déroulement du projet est liée au corps enseignant qui représente un groupe d'expert qui est a disponibilités pour répondre aux éventuelles questions, ou résoudre d'éventuels problèmes. \\ \\ 
-De plus les jardins partagés deviennent de plus en plus courants notamment à cause de l'inflation des prix de l’alimentation qui incite à produire et manger local mais aussi le plan de relance (France Relance) pour les jardins partagés mais aussi l'absence de concurrent national sur le marché. \\  \\ 
-Quant au risques possibles au projet ceux-si sont multiples  \\ 
-Que ce soit organisationnel avec notamment des dates imposées pour les livrables et donc la possibilité de ne pas réussir à être dans les délais mais aussi le fait qu'un nombre conséquent de concurrent risque de voir le jour. \\ 
-De plus le plus grand risque du projet est que celui-ci repose sur la bienveillance des utilisateurs et l'implication de ceux-ci dans leurs jardins.
+Il y a différents risques et opportunités liés au déroulement du projet. \\ 
+La principale opportunité pour le déroulement du projet est liée au corps enseignant qui représente un groupe d'experts qui est disponible pour répondre aux éventuelles questions, ou résoudre d'éventuels problèmes. \\ \\ 
+De plus les jardins partagés deviennent de plus en plus courants notamment grâce à l'inflation des prix de l’alimentation, ce qui incite à produire et à manger local, mais aussi le plan de relance (France Relance) pour les jardins partagés. Le fait qu'aucun concurrent n'est implanté nationalement et ne domine le marché est également une grande opportunité. \\  \\ 
+Quant aux risques possibles du projet, ceux-ci sont multiples :  \\ 
+Que ce soit organisationnel, avec notamment des dates imposées pour les livrables et donc la possibilité de ne pas réussir à être dans les délais, mais aussi le fait qu'un nombre conséquent de projets concurrents risque de voir le jour en même temps que le notre. \\ 
+De plus, le plus grand risque du projet est que celui-ci repose sur la bienveillance des utilisateurs et l'implication de ceux-ci dans leurs jardins.
 \end{document}
