--- a/gestion-projet/rapport.tex
+++ b/gestion-projet/rapport.tex
@@ -366,10 +366,10 @@ De plus, le plus grand risque du projet est que celui-ci repose sur la bienveill
 % ------------------------------Conclusion -------------------------------
 
 \chapter*{Conclusion}
-La première étape a été de réalisé l'étude de l'existant pour apprendre le milieu du jardin partagé et de ce qui se fait. \\ 
-Grâce a ceci nous avons pu concevoir une application originale qui apporte quelque chose aux utilisateurs de jardin partagé, pour réaliser celui-ci dans des délais aussi court, nous avons réalisés de nombreuses réunions qui ont permit de répartir les différentes tâches tout en étant sûr que chaque membre de groupe ait la même vision du projet. \\ \\ 
-Pour résumer celui-ci Jardi'Quest sera une application qui a pour objectifs de rendre les jardins partagés ludique, comme un jeu et d'insister sur le mot "partagé" car actuellement les jardins partagés représente plus souvent un terrain découpé en parcelles. \\ 
-Notre application a pour but de faire des jardins un travail d'équipe, qu'il soit entretenu par tous avec tout le monde qui apporte ça contribution a celui-ci a l'aide de quête
+La première étape a été de réaliser l'étude de l'existant pour apprendre le milieu du jardin partagé et de ce qui se fait. \\ 
+Grâce à ceci nous avons pu concevoir une application originale qui apporte quelque chose aux utilisateurs de jardins partagés. Pour réaliser celui-ci dans des délais aussi court, nous avons réalisé de nombreuses réunions qui ont permis de répartir les différentes tâches tout en étant sûr que chaque membre de groupe ait la même vision du projet. \\ \\ 
+Pour résumer celui-ci Jardi'Quest sera une application qui a pour objectif de rendre les jardins partagés ludique, comme un jeu et d'insister sur le mot "partagé" car actuellement ils sont le plus souvent découpé en parcelles. \\ 
+Notre application a pour but de faire des jardins un travail d'équipe, qu'il soit entretenu par tous avec chaque membre apportant sa contribution à celui-ci a l'aide de quêtes.
 
 % ---------------------------------- Annexes ---------------------------------
 \newpage
